sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:3: error: not found: value getNombreValeur
  var ecart=getNombreValeur()
            ^AlgCombSort:11: error: not found: value i
   i=0
   ^AlgCombSort:12: error: not found: value i
   while (i+ecart<lgr){
          ^AlgCombSort:13: error: not found: value i
     if (!plusPetit(i,i+ecart)){
                    ^AlgCombSort:13: error: not found: value i
     if (!plusPetit(i,i+ecart)){
                      ^AlgCombSort:14: error: not found: value i
       echange(i,i+ecart)
               ^AlgCombSort:14: error: not found: value i
       echange(i,i+ecart)
                 ^AlgCombSort:17: error: not found: value i
     i+=1
     ^AlgCombSort:19: error: value or is not a member of Boolean
  } while (echangefait==true or ecart>=1)
                             ^